--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,107 @@
-requests==2.31.0
+annotated-types==0.7.0
+anyio==4.7.0
+asttokens==2.4.1
+attrs==24.2.0
 beautifulsoup4==4.12.2
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+cfgv==3.4.0
+charset-normalizer==3.4.0
+cobble==0.1.4
+comm==0.2.2
+cryptography==44.0.0
+debugpy==1.8.7
+decorator==5.1.1
+defusedxml==0.7.1
+distlib==0.3.9
+distro==1.9.0
+et_xmlfile==2.0.0
+executing==2.1.0
+filelock==3.16.1
+google-ai-generativelanguage==0.6.10
+google-api-core==2.21.0
+google-api-python-client==2.149.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.3
+googleapis-common-protos==1.65.0
+grpcio==1.66.2
+grpcio-status==1.66.2
+h11==0.14.0
+httpcore==1.0.7
+httplib2==0.22.0
+httpx==0.28.1
+humanize==4.11.0
+identify==2.6.5
+idna==3.10
+ipykernel==6.29.5
+ipython==8.28.0
+jedi==0.19.1
+jiter==0.8.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+lxml==5.3.0
+mammoth==1.9.0
+markdownify==0.14.1
+markitdown==0.0.1a3
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+nodeenv==1.9.1
+numpy==2.1.2
+openai==1.59.3
+openpyxl==3.1.5
+packaging==24.1
+pandas==2.2.3
+parso==0.8.4
+pathvalidate==3.2.3
+pdfminer.six==20240706
+pexpect==4.9.0
+pillow==11.1.0
+platformdirs==4.3.6
+pre_commit==4.0.1
+prompt_toolkit==3.0.48
+proto-plus==1.24.0
+protobuf==5.28.2
+psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+puremagic==1.28
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
+pydub==0.25.1
+Pygments==2.18.0
+pyparsing==3.2.0
 PyPDF2==3.0.1
-markitdown
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-pptx==1.0.2
+pytz==2024.2
+PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
+requests==2.31.0
+rpds-py==0.20.1
+rsa==4.9
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.6
+SpeechRecognition==3.13.0
+stack-data==0.6.3
+tenacity==9.0.0
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2024.2
+uritemplate==4.1.1
+urllib3==2.2.3
+virtualenv==20.28.1
+wcwidth==0.2.13
+XlsxWriter==3.2.0
+youtube-transcript-api==0.6.3
